# qlc3d-1

./: CMakeLists.txt  build qlc3d.bat
build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/qlc3d/: Makefile  cmake_install.cmake
build-release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/tests/testutil/: CTestTestfile.cmake  Makefile  cmake_install.cmake
qlc3d/includes/: electrodes.h  energy.h  eventhandler.h  geometry.h  lc-representation.h  mesh.h  reader.h  regulargrid.h  resultio.h  simu.h  simulation-container.h  solutionvector.h
qlc3d/includes/geom/: aabox.h
qlc3d/includes/io/: result-output.h  vtkiofun.h
qlc3d/includes/lc/: lc-energy-terms.h
qlc3d/src/: calcQ3d.cpp  electrodes.cpp  energy.cpp  eventhandler.cpp  geometry.cpp  lc-representation.cpp  mesh.cpp  regulargrid.cpp  resultio.cpp  settings-reader.cpp  simu.cpp  simulation-container.cpp  solutionvector.cpp
qlc3d/src/io/: result-output.cpp  vtkiofun.cpp
qlc3d/src/lc/: lc-solver.cpp
qlc3d/src/potential/: potential-solver.cpp
tests/cpp/io/: vtk-unstructured-grid-writer-tests.cpp
tests/cpp/potential/: potential-solver-test.cpp
